Updated resume and fixed dl btn
I changed the resume to my most updated resume and fixed the margin-bottom so that it doesn't cut off. I also fixed the proportions of the download button and the position of the button relative to the resume div.

--- a/css/style.css
+++ b/css/style.css
@@ -112,9 +112,9 @@ video {
 
 .dl-btn {
     width: 7%;
-    height: 6%;
+    height: 5.5%;
     position: absolute;
-    top: 3%;
+    top: 1.5%;
     left: 82%;
     z-index: 3;
     border-radius: 190px;
@@ -128,7 +128,7 @@ video {
 .resume {
     margin: auto;
     border-radius: 5%;
-    margin-bottom: 120px;
+    margin-bottom: 150px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     position: relative;
     top: 0;
